# cmake_template_project_generator

./: README.md  generate_project.py
hell_proj/: CMakeLists.txt
hell_proj/applications/: CMakeLists.txt
hell_proj/applications/s1/: CMakeLists.txt
hell_proj/applications/s2/: CMakeLists.txt
hell_proj/applications/s3/: CMakeLists.txt
hell_proj/applications/s4/: CMakeLists.txt  main.cpp
hell_proj/src/: CMakeLists.txt
hell_proj/src/dell/: CMakeLists.txt
hell_proj/src/hell/: CMakeLists.txt
hell_proj/src/sell/: CMakeLists.txt
hell_proj/tests/: CMakeLists.txt
hell_proj/tests/dell_tests/: CMakeLists.txt
hell_proj/tests/hell_tests/: CMakeLists.txt
hell_proj/tests/sell_tests/: CMakeLists.txt
